tests/misc/fallback_test/expected/006_crash.php.expected
src/006_crash.php:6 PhanNoopVariable Unused variable
src/006_crash.php:6 PhanSyntaxError syntax error, unexpected ',' (at column 19)
